// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack plugin baseline 1`] = `
Array [
  Object {
    "chunkNames": Array [],
    "chunks": Array [],
    "emitted": true,
    "isOverSizeLimit": undefined,
    "name": "../node_modules/.cache/bundle-stats/baseline.json",
    "size": 0,
  },
  Object {
    "chunkNames": Array [],
    "chunks": Array [],
    "emitted": true,
    "isOverSizeLimit": undefined,
    "name": "bundle-stats.html",
    "size": 0,
  },
  Object {
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      0,
    ],
    "emitted": true,
    "isOverSizeLimit": undefined,
    "name": "main.js",
    "size": 956,
  },
]
`;

exports[`webpack plugin default config 1`] = `
Array [
  Object {
    "chunkNames": Array [],
    "chunks": Array [],
    "emitted": true,
    "isOverSizeLimit": undefined,
    "name": "bundle-stats.html",
    "size": 0,
  },
  Object {
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      0,
    ],
    "emitted": true,
    "isOverSizeLimit": undefined,
    "name": "main.js",
    "size": 956,
  },
]
`;
